--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "convert-units": "^2.3.4",
+    "mathjs": "^13.2.0",
     "puppeteer": "^23.4.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
